--- a/index.html
+++ b/index.html
@@ -92,7 +92,8 @@
         <p>জানিনা তোর উত্তর কি হবে তাও অপেক্ষায় থাকবো.. জানিনা তুই এতটা পড়বি কিনা বা হয়ত এটা পুরোটাই না পড়া থেকে যাবে । অপটু হাতের খাপছাড়া লেখা কার বা পড়তে ভাললাগে যদি পড়ে থাকিস তাহলে অসংখ্য ধন্যবাদ 24 এ আমার শেষ ইচ্ছে এটাই ছিল তোকে আমার কথাগুলো জানানো।</p>
         <p>যা একটা কথা জিজ্ঞাসা করিনি মনে পড়ল তো বলে নিই। তোর জীবনে অন্য কেউ আছে কিনা জানিনা যদি থেকে থাকে তাহলে ক্ষমা চাইছি এই লেখা গুলোর জন্য ।</p>
         <p>লেখার তো আরো অনেক কিছু ছিল কিন্ত হয়ত আমি তোর সময় নষ্ট করছি তাই এখানেই শেষ করলাম  ।</p>
-        <p>পরিশেষে হ্যাপি নিউ ইয়ার ইন এডভ্যান্স। ভগবান তোকে ভাল রাখুন আর তোর সব মনস্কামনা পূর্ণ করুন । তাহলে এতটাই টা টা ............</p>
+        <p>পরিশেষে হ্যাপি নিউ ইয়ার ইন এডভ্যান্স। ভগবান তোকে ভাল রাখুন আর তোর সব মনস্কামনা পূর্ণ করুন । তাহলে আজ এখানেই শেষ করলাম </p>
+        <p>ইতি - বেনামী ডাকবাক্স<p>
     </div>
 </body>
 </html>
